<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="55sp"
    android:background="@color/dark"
    >

    <TextView
        android:id="@+id/brand"
        android:layout_width="110sp"
        android:layout_height="match_parent"
        android:textStyle="bold"
        android:text="@string/OEM_example"
        android:textColor="@color/white"
        android:padding="10sp"

        />
    <TextView
        android:id="@+id/subBrand"
        android:layout_width="110sp"
        android:layout_height="match_parent"
        android:textStyle="bold"
        android:text="@string/subBrand_example"
        android:textColor="@color/white"
        android:padding="10sp"
        />

    <TextView
        android:id="@+id/speed"
        android:layout_width="90sp"
        android:layout_height="match_parent"
        android:textStyle="bold"
        android:text="@string/speed_example"
        android:textColor="@color/white"
        android:padding="10sp"
        />

    <TextView
        android:id="@+id/die"
        android:layout_width="100sp"
        android:layout_height="match_parent"
        android:textStyle="bold"
        android:text="@string/die_example"
        android:textColor="@color/white"
        android:padding="10sp"
        />


</LinearLayout>