<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AccountActivity"
    android:background="@color/dark"
    >

    <TextView
        android:id="@+id/banner_Hup"
        android:text="@string/login_banner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:textColor="@color/white"
        />

    <TextView
        android:id="@+id/info1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/banner_Hup"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true"
        android:text="@string/instruct1"
        android:textSize="20sp"
        android:textColor="@color/white"
        />

    <TextView
        android:id="@+id/emailField"
        android:layout_width="60dp"
        android:layout_height="42dp"
        android:gravity="center_vertical"
        android:layout_toLeftOf="@+id/editText"
        android:layout_below="@+id/info1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/editText"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="40dp"
        android:text="@string/prompt_email"
        android:textSize="18sp"
        android:textColor="@color/white"
        />

    <TextView
        android:id="@+id/hint2"
        android:layout_width="120dp"
        android:layout_height="42dp"
        android:gravity="center_vertical"
        android:layout_below="@+id/emailField"
        android:layout_toLeftOf="@+id/editText2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/editText2"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:text="@string/prompt_password"
        android:textSize="18sp"
        android:textColor="@color/white"
        />

    <EditText
        android:id="@+id/editText"
        android:layout_width="210dp"
        android:layout_height="42dp"
        android:gravity="center_vertical"
        android:layout_below="@+id/info1"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="60sp"
        android:layout_marginRight="40dp"
        android:hint="@string/email_hint"
        android:textColorHint="@color/dark2"
        android:textSize="18sp"
        android:autofillHints=""
        android:inputType="text"
        android:background="@color/grey"
        android:textColor="@color/white"
        />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="210dp"
        android:layout_height="42dp"
        android:gravity="center_vertical"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/editText"
        android:layout_alignParentRight="true"
        android:layout_marginRight="40dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="60sp"
        android:hint="@string/password_hint"
        android:autofillHints=""
        android:textColorHint="@color/dark2"
        android:inputType="textPassword"
        android:background="@color/grey"
        android:textSize="18sp"
        android:textColor="@color/white"
        />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10sp"
        android:text="@string/return_email"
        android:backgroundTint="@color/Azure"
        android:textColor="@color/white"
        />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20sp"
        android:text="@string/register_text"
        android:backgroundTint="@color/Azure"
        android:textColor="@color/white"
        />

</RelativeLayout>